added one log file

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,25 @@ footer {
     text-align: center;
 }
 
+/* Fancy Tea button style*/
+.TEA-button {
+    display: inline-block;
+    padding: 40px 80px;
+    background-image: url("./Image files/alexander.png");
+    background-size: cover;
+    background-position: center center;
+    color: purple;
+    font-size: 40px;
+    text-decoration: none;
+    border-radius: 5px;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.TEA-button:hover{
+    background-color: #ff4081;
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
     header h1 {
